# skm

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: decisions.md
src/: cmd.rs  error.rs  main.rs  model.rs  pipeline.rs  source.rs  sys.rs  ui.rs
src/cmd/: add.rs  cache.rs  doctor.rs  init.rs  lock.rs  remove.rs  status.rs  sync.rs  update.rs
src/cmd/add/: smart_spec.rs
src/model/: agent.rs  config.rs  lockfile.rs  manifest.rs
src/pipeline/: deploy.rs  resolve.rs
src/source/: git.rs  local.rs  tar.rs  zip.rs
src/sys/: cache.rs  fsutil.rs  hash.rs
tests/: cmd_add.rs  cmd_cache.rs  cmd_doctor.rs  cmd_init.rs  manifest.rs  scope_global.rs  source_archive.rs  source_archive_safety.rs  source_git.rs  source_local.rs  status.rs  sync_codes.rs  sync_ownership.rs
tests/support/: archive.rs  env.rs  fake_cmd.rs  git_repo.rs  manifest.rs  mod.rs
